# data-complexity-metrics

./: .gitignore  README.md  pyproject.toml
src/data_complexity/: main.py  preprocessing.py  reports.py
src/data_complexity/metrics/: geometry.py  overlap.py
tests/: test_metrics.py  test_preprocessing.py
