[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-complexity"
version = "0.1.0"
description = "A modular library to assess data geometry and complexity metrics for ML workflows."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Juan José", email = "juanjo.mrmz@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
